--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <html>
 
 <head>
+    <script src="adSense.js"></script>
+    
     <meta charset="utf-8" />
     <meta name="website" content="ucbg.github.io" />
     <meta name="format-detection" content="telephone=no" />
